--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ tokio = { version = "1.39.2", features = ["full"] }
 anyhow = { version = "1.0.86" }
 tokio-util = { version = "0.7.11", features = ["codec"] }
 bytes = "1.7.1"
+log = "0.4.22"
+log4rs = "1.3.0"
 
 [[bin]]
 name = "redis"
