--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ bytes = "1.7.1"
 log = "0.4.22"
 log4rs = "1.3.0"
 
+[dev-dependencies]
+tokio = { version = "1.0", features = ["full", "test-util"] }
+
 [[bin]]
 name = "redis"
 path = "src/server/main.rs"
