--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ tokio-util = { version = "0.7.11", features = ["codec"] }
 bytes = "1.7.1"
 log = "0.4.22"
 log4rs = "1.3.0"
-rustyline = "14.0.0"
+rustyline = { version = "14.0.0", features = ["derive"] }
 
 [dev-dependencies]
 tokio = { version = "1.0", features = ["full", "test-util"] }
